syntax = "proto2";

package sf.solana.dex.sandwiches.v1;

message SandwichOutput {
    repeated Sandwich data = 1;
}
message Sandwich {
    repeated SwapInfo frontrun = 1;
    repeated SwapInfo victim_swaps = 2;
    repeated SwapInfo backrun = 3;
}

message SwapInfo {
    required uint64 block_slot = 1;
    required string tx_id = 2;
    required string signer = 3;
    required string pool_address = 4;
    required string token_in = 5;
    required string token_out = 6;
    required double amount_in = 7;
    required double amount_out = 8;
    required uint64 tx_fee = 9;
    required string multi_location = 10;
    required uint32 instruction_index = 11;
    required bool is_inner_instruction = 12;
    required uint32 inner_instruction_index = 13;
    required uint32 transaction_index = 14;
    required string inner_program = 15;
    required string outer_program = 16;
}